fix typo in authentication.proto
