# n0core/pkg/api/auth/authentication/api.go
@@ -4,6 +4,7 @@ import (
 	"context"
 	"crypto/rand"
 	"io"
+	"log"
 	"reflect"
 
 	"google.golang.org/grpc/metadata"
@@ -71,7 +72,7 @@ func IsContainingPublicKey(keys map[string]string, key *jwtutil.PublicKey) (bool
 	return false, nil
 }
 
-func (a *AuthenticationAPI) PublicKeyAuthenricate(stream pauth.AuthenticationService_PublicKeyAuthenricateServer) error {
+func (a *AuthenticationAPI) PublicKeyAuthenticate(stream pauth.AuthenticationService_PublicKeyAuthenticateServer) error {
 	req, err := stream.Recv()
 	if err != nil {
 		return errors.Wrap(err, "")
@@ -103,7 +104,7 @@ func (a *AuthenticationAPI) PublicKeyAuthenricate(stream pauth.AuthenticationSer
 
 	challengePublicKey, err := jwtutil.ParsePublicKey([]byte(start.PublicKey))
 	if err != nil {
-		return errors.Wrap(err, "")
+		return grpcutil.Wrapf(codes.Internal, err, "")
 	}
 
 	if ok, err := IsContainingPublicKey(user.PublicKeys, challengePublicKey); err != nil {
@@ -114,40 +115,40 @@ func (a *AuthenticationAPI) PublicKeyAuthenricate(stream pauth.AuthenticationSer
 
 	challenge := make([]byte, 256)
 	io.ReadFull(rand.Reader, challenge[:])
-	err = stream.Send(&pauth.PublicKeyAuthenricateResponse{
-		Message: &pauth.PublicKeyAuthenricateResponse_Challenge_{
-			Challenge: &pauth.PublicKeyAuthenricateResponse_Challenge{
+	err = stream.Send(&pauth.PublicKeyAuthenticateResponse{
+		Message: &pauth.PublicKeyAuthenticateResponse_Challenge_{
+			Challenge: &pauth.PublicKeyAuthenticateResponse_Challenge{
 				Challenge: challenge,
 			},
 		},
 	})
 	if err != nil {
-		return errors.Wrap(err, "")
+		return grpcutil.Wrapf(codes.Internal, err, "")
 	}
 
 	req, err = stream.Recv()
 	if err != nil {
-		return errors.Wrap(err, "")
+		return grpcutil.Wrapf(codes.Internal, err, "")
 	}
 	challengeToken := req.GetResponse()
 
 	if err := challengePublicKey.VerifyChallengeToken(challengeToken.ChallengeToken, user.Name, hostname, challenge); err != nil {
-		return errors.Wrap(err, "")
+		return grpcutil.Wrapf(codes.Internal, err, "")
 	}
 
 	kg := jwtutil.NewKeyGenerator(a.secret)
 	authnPrivateKey, err := kg.Generate(hostname)
 	if err != nil {
-		return errors.Wrap(err, "")
+		return grpcutil.Wrapf(codes.Internal, err, "")
 	}
 
 	authnToken, err := authnPrivateKey.GenerateAuthenticationToken(user.Name, hostname)
 	if err != nil {
-		return errors.Wrap(err, "")
+		return grpcutil.Wrapf(codes.Internal, err, "")
 	}
-	stream.Send(&pauth.PublicKeyAuthenricateResponse{
-		Message: &pauth.PublicKeyAuthenricateResponse_Result_{
-			Result: &pauth.PublicKeyAuthenricateResponse_Result{
+	stream.Send(&pauth.PublicKeyAuthenticateResponse{
+		Message: &pauth.PublicKeyAuthenticateResponse_Result_{
+			Result: &pauth.PublicKeyAuthenticateResponse_Result{
 				AuthenticationToken: authnToken,
 			},
 		},
